# AutoAgentLab

./: .gitignore  README.md  pyproject.toml
autoagentlab/: __init__.py  _display.py  agent.py  cli.py  evaluator.py  loop.py  mutator.py  population.py  researcher.py  scorer.py  tools.py
benchmarks/: coding.json  german_qa.json  instruction_following.json  math.json  qa.json  reasoning.json
examples/: custom_benchmark.py
tests/: test_check_answer.py  test_evaluator_metrics.py  test_lineage.py  test_population.py  test_scorer.py  test_tools.py
